// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-Rmtcm dHHMJU"
  >
    <table
      className="sc-bRBYWo cYDleS"
    >
      <tbody
        className="sc-jhAzac hmXDXQ"
      >
        <tr
          className="sc-fBuWsC fqbTxf"
        >
          <td
            className="sc-fMiknA YERcy"
          >
            US
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-fBuWsC fqbTxf"
        >
          <td
            className="sc-fMiknA YERcy"
          >
            PL
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Warsaw
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-fBuWsC fqbTxf"
        >
          <td
            className="sc-fMiknA YERcy"
          >
            DE
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Berlin
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-fBuWsC fqbTxf"
        >
          <td
            className="sc-fMiknA YERcy"
          >
            FR
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Paris
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-fBuWsC fqbTxf"
        >
          <td
            className="sc-fMiknA YERcy"
          >
            ES
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Madird
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-fBuWsC fqbTxf"
        >
          <td
            className="sc-fMiknA YERcy"
          >
            —
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-Rmtcm dHHMJU"
  >
    <table
      className="sc-bRBYWo cYDleS"
    >
      <thead
        className="sc-hzDkRC kpsoyz"
      >
        <tr
          className="sc-fBuWsC fqbTxf"
        >
          <th
            className="sc-dVhcbM hAvGTB"
          >
            Code
          </th>
          <th
            className="sc-dVhcbM hAvGTB"
          >
            Capital
          </th>
          <th
            className="sc-dVhcbM hAvGTB"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-jhAzac hmXDXQ"
      >
        <tr
          className="sc-fBuWsC fqbTxf"
        >
          <td
            className="sc-fMiknA YERcy"
          >
            US
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-fBuWsC fqbTxf"
        >
          <td
            className="sc-fMiknA YERcy"
          >
            PL
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Warsaw
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-fBuWsC fqbTxf"
        >
          <td
            className="sc-fMiknA YERcy"
          >
            DE
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Berlin
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-fBuWsC fqbTxf"
        >
          <td
            className="sc-fMiknA YERcy"
          >
            FR
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Paris
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-fBuWsC fqbTxf"
        >
          <td
            className="sc-fMiknA YERcy"
          >
            ES
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Madird
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-fBuWsC fqbTxf"
        >
          <td
            className="sc-fMiknA YERcy"
          >
            —
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-Rmtcm dHHMJU"
  >
    <table
      className="sc-bRBYWo cYDleS"
    >
      <thead
        className="sc-hzDkRC kpsoyz"
      >
        <tr
          className="sc-fBuWsC fqbTxf"
        >
          <th
            className="sc-dVhcbM hAvGTB"
          >
            #
          </th>
          <th
            className="sc-dVhcbM hAvGTB"
          >
            Code
          </th>
          <th
            className="sc-dVhcbM hAvGTB"
          >
            Capital
          </th>
          <th
            className="sc-dVhcbM hAvGTB"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-jhAzac hmXDXQ"
      >
        <tr
          className="sc-fBuWsC fqbTxf"
        >
          <td
            className="sc-eqIVtm gFIQpY"
          >
            1
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            US
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-fBuWsC fqbTxf"
        >
          <td
            className="sc-eqIVtm gFIQpY"
          >
            2
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            PL
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Warsaw
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-fBuWsC fqbTxf"
        >
          <td
            className="sc-eqIVtm gFIQpY"
          >
            3
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            DE
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Berlin
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-fBuWsC fqbTxf"
        >
          <td
            className="sc-eqIVtm gFIQpY"
          >
            4
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            FR
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Paris
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-fBuWsC fqbTxf"
        >
          <td
            className="sc-eqIVtm gFIQpY"
          >
            5
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            ES
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Madird
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-fBuWsC fqbTxf"
        >
          <td
            className="sc-eqIVtm gFIQpY"
          >
            6
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            —
          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-fMiknA YERcy"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
